--- a/.github/workflows/build-linux-arm64.yml
+++ b/.github/workflows/build-linux-arm64.yml
@@ -13,7 +13,8 @@ jobs:
       matrix:
         arch: [amd64, arm64]
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
@@ -29,7 +30,7 @@ jobs:
         MOVEVM_VERSION: v0.2.12  # 적절한 버전으로 변경하세요
       run: |
         docker buildx build --platform linux/${{ matrix.arch }} \
-          --file .github/workflows/Dockerfile.linux \
+          --file Dockerfile \
           --build-arg ARCH=${{ matrix.arch }} \
           --build-arg L1_VERSION=${{ env.L1_VERSION }} \
           --build-arg L1_NETWORK_NAME=${{ env.L1_NETWORK_NAME }} \
@@ -42,38 +43,3 @@ jobs:
       with:
         name: initia-linux-${{ matrix.arch }}
         path: ./output/initia_${{ env.L1_VERSION }}_Linux_${{ matrix.arch }}.tar.gz
-
-  build-darwin:
-    runs-on: macos-latest
-    strategy:
-      matrix:
-        arch: [amd64, arm64]
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: '1.20'
-
-    - name: Build for Darwin-${{ matrix.arch }}
-      env:
-        ARCH: ${{ matrix.arch }}
-        L1_VERSION: ${{ github.sha }}
-        L1_NETWORK_NAME: testnet
-        MOVEVM_VERSION: v0.2.12  # 적절한 버전으로 변경하세요
-      run: |
-        cd initia
-        GOOS=darwin GOARCH=${{ matrix.arch }} make build
-        cd ./build
-        cp ~/go/pkg/mod/github.com/initia-labs/movevm@${MOVEVM_VERSION}/api/libmovevm.dylib ./
-        cp ~/go/pkg/mod/github.com/initia-labs/movevm@${MOVEVM_VERSION}/api/libcompiler.dylib ./
-        tar -czvf initia_${L1_VERSION}_Darwin_${{ matrix.arch }}.tar.gz initiad libmovevm.dylib libcompiler.dylib
-        mkdir -p ../../networks/${L1_NETWORK_NAME}/binaries/
-        mv ./initia_${L1_VERSION}_Darwin_${{ matrix.arch }}.tar.gz ../../networks/${L1_NETWORK_NAME}/binaries/
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: initia-darwin-${{ matrix.arch }}
-        path: networks/${{ env.L1_NETWORK_NAME }}/binaries/initia_${{ env.L1_VERSION }}_Darwin_${{ matrix.arch }}.tar.gz
