--- a/.github/workflows/build-darwin.yml
+++ b/.github/workflows/build-darwin.yml
@@ -1,4 +1,4 @@
-name: Cross-Platform Build and Upload
+name: CI
 
 on:
   push:
@@ -8,47 +8,47 @@ on:
 
 env:
   L1_NETWORK_NAME: testnet
-  GO_VERSION: '1.22'
-  MOVEVM_VERSION: 'v0.2.12'  # 적절한 버전으로 변경하세요
 
 jobs:
-  build-and-upload:
+  build:
+    runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        arch: [amd64, arm64]
-    runs-on: ${{ matrix.os }}
+        platform:
+          - linux/amd64
+          - linux/arm64
+          - darwin/amd64
+          - darwin/arm64
+
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: ${{ env.GO_VERSION }}
-
       - name: Set up QEMU
-        if: runner.os == 'Linux'
         uses: docker/setup-qemu-action@v2
 
-      - name: Build for ${{ runner.os }}-${{ matrix.arch }}
-        env:
-          ARCH: ${{ matrix.arch }}
-          L1_VERSION: ${{ github.sha }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: .github/workflows/Dockerfile
+          platforms: ${{ matrix.platform }}
+          load: true
+          tags: initia:${{ github.sha }}
+
+      - name: Export binary
         run: |
-          if [ "${{ runner.os }}" == "Linux" ]; then
-            GOOS=linux GOARCH=${{ matrix.arch }} make build-linux-with-shared-library
-            cd build
-            mv libmovevm.so libmovevm.${{ matrix.arch }}.so
-            mv libcompiler.so libcompiler.${{ matrix.arch }}.so
-            tar -czvf initia_${L1_VERSION}_Linux_${{ matrix.arch }}.tar.gz ./initiad libmovevm.${{ matrix.arch }}.so libcompiler.${{ matrix.arch }}.so
-          else
-            GOOS=darwin GOARCH=${{ matrix.arch }} make build
-            cd build
-            cp ~/go/pkg/mod/github.com/initia-labs/movevm@${MOVEVM_VERSION}/api/libmovevm.dylib ./
-            cp ~/go/pkg/mod/github.com/initia-labs/movevm@${MOVEVM_VERSION}/api/libcompiler.dylib ./
-            tar -czvf initia_${L1_VERSION}_Darwin_${{ matrix.arch }}.tar.gz initiad libmovevm.dylib libcompiler.dylib
-          fi
+          platform=${{ matrix.platform }}
+          os=${platform%/*}
+          arch=${platform#*/}
+          container_id=$(docker create initia:${{ github.sha }})
+          docker cp $container_id:/app ./app
+          tar -czvf initia_${{ github.sha }}_${os^}_${arch}.tar.gz -C app .
+          docker rm $container_id
 
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
@@ -59,8 +59,7 @@ jobs:
 
       - name: Upload to GCS
         run: |
-          if [ "${{ runner.os }}" == "Linux" ]; then
-            gsutil cp build/initia_${L1_VERSION}_Linux_${{ matrix.arch }}.tar.gz gs://your-bucket-name/networks/${{ env.L1_NETWORK_NAME }}/binaries/
-          else
-            gsutil cp build/initia_${L1_VERSION}_Darwin_${{ matrix.arch }}.tar.gz gs://your-bucket-name/networks/${{ env.L1_NETWORK_NAME }}/binaries/
-          fi
+          platform=${{ matrix.platform }}
+          os=${platform%/*}
+          arch=${platform#*/}
+          gsutil cp initia_${{ github.sha }}_${os^}_${arch}.tar.gz gs://your-bucket-name/networks/${{ env.L1_NETWORK_NAME }}/binaries/
