--- a/.github/workflows/build-darwin.yml
+++ b/.github/workflows/build-darwin.yml
@@ -18,7 +18,41 @@ jobs:
       matrix:
         arch: [amd64, arm64]
     steps:
-      # (이전과 동일한 steps)
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: .github/workflows/Dockerfile
+          platforms: linux/${{ matrix.arch }}
+          load: true
+          tags: initia:${{ github.sha }}
+
+      - name: Export binary
+        run: |
+          container_id=$(docker create initia:${{ github.sha }})
+          docker cp $container_id:/app ./app
+          tar -czvf initia_${{ github.sha }}_Linux_${{ matrix.arch }}.tar.gz -C app .
+          docker rm $container_id
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+
+      - name: Upload to GCS
+        run: |
+          gsutil cp initia_${{ github.sha }}_Linux_${{ matrix.arch }}.tar.gz gs://your-bucket-name/networks/${{ env.L1_NETWORK_NAME }}/binaries/
 
   build-darwin:
     runs-on: macos-latest
