--- a/.github/workflows/Dockerfile.linux.amd64
+++ b/.github/workflows/Dockerfile.linux.amd64
@@ -8,29 +8,14 @@ COPY . .
 
 ENV MOVEVM_VERSION=v0.2.12
 
-# 디버깅을 위한 환경 출력
-RUN echo "Current directory:" && \
-    pwd && \
-    echo "Directory contents:" && \
-    ls -la && \
-    echo "Makefile contents:" && \
-    cat Makefile
+# 직접 빌드 수행
+RUN go mod download
+RUN CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -o /src/build/initiad ./cmd/initiad
 
-# 빌드 명령 실행 및 오류 시 추가 정보 출력
-RUN make build-linux-with-shared-library ARCH=amd64 || { \
-    echo "Make failed. Displaying debug information:"; \
-    echo "Go version:"; \
-    go version; \
-    echo "Go environment:"; \
-    go env; \
-    echo "Make version:"; \
-    make --version; \
-    echo "Shell:"; \
-    echo $SHELL; \
-    echo "Make verbose output:"; \
-    make build-linux-with-shared-library ARCH=amd64 -n; \
-    exit 1; \
-    }
+# 공유 라이브러리 복사 (이 부분은 프로젝트 구조에 따라 조정 필요)
+RUN mkdir -p /src/build
+RUN cp /go/pkg/mod/github.com/initia-labs/movevm@${MOVEVM_VERSION}/api/libmovevm.so /src/build/
+RUN cp /go/pkg/mod/github.com/initia-labs/movevm@${MOVEVM_VERSION}/api/libcompiler.so /src/build/
 
 FROM ubuntu:20.04
 
