--- a/.github/workflows/Dockerfile.linux.amd64
+++ b/.github/workflows/Dockerfile.linux.amd64
@@ -8,14 +8,19 @@ COPY . .
 
 ENV MOVEVM_VERSION=v0.2.12
 
-# 직접 빌드 수행
+# Go 모듈 다운로드
 RUN go mod download
+
+# 직접 빌드 수행
 RUN CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -o /src/build/initiad ./cmd/initiad
 
 # 공유 라이브러리 복사 (이 부분은 프로젝트 구조에 따라 조정 필요)
 RUN mkdir -p /src/build
-RUN cp /go/pkg/mod/github.com/initia-labs/movevm@${MOVEVM_VERSION}/api/libmovevm.so /src/build/
-RUN cp /go/pkg/mod/github.com/initia-labs/movevm@${MOVEVM_VERSION}/api/libcompiler.so /src/build/
+RUN go list -m all | grep github.com/initia-labs/movevm
+RUN find /go/pkg/mod -name "libmovevm.so"
+RUN find /go/pkg/mod -name "libcompiler.so"
+RUN cp $(find /go/pkg/mod -name "libmovevm.so" | head -n 1) /src/build/ || echo "libmovevm.so not found"
+RUN cp $(find /go/pkg/mod -name "libcompiler.so" | head -n 1) /src/build/ || echo "libcompiler.so not found"
 
 FROM ubuntu:20.04
 
