--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -4,9 +4,9 @@ on:
   # push:
     # tags:
     #   - 'v*'
-  push:
-    branches:
-      - "main"
+  # push:
+  #   branches:
+  #     - "main"
       
 jobs:
   # build-linux-amd64:
