--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,6 +26,7 @@ jobs:
       # for private repo access
       GOPRIVATE: github.com/initia-labs,github.com/skip-mev/slinky
       GITHUB_ACCESS_TOKEN: ${{ secrets.GH_READ_TOKEN }}
+      GOLANGCI_LINT_VERSION: v1.59.1
     name: golangci-lint
     runs-on: ubuntu-latest
     steps:
@@ -43,6 +44,8 @@ jobs:
             go.sum
       # for private repo access
       - run: git config --global url.https://${GITHUB_ACCESS_TOKEN}:x-oauth-basic@github.com/.insteadOf https://github.com/
+      # install golangci-lint
+      - run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@${GOLANGCI_LINT_VERSION}
       - name: run go linters (long)
         if: env.GIT_DIFF
         id: lint_long
