--- a/.github/workflows/build-linux-arm64.yml
+++ b/.github/workflows/build-linux-arm64.yml
@@ -86,4 +86,4 @@ jobs:
           files: |
               ./initia_${{ env.VERSION }}_Linux_${{ env.ARCH_NAME }}.tar.gz
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
+          GITHUB_TOKEN: ${{ secrets.GH_RELEASE_TOKEN }}
