Refactor Darwin build workflow for ARM64 only

--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -8,16 +8,24 @@ on:
 jobs:
   build-linux-amd64:
     uses: ./.github/workflows/build-linux-amd64.yml
+    with:
+      arch: amd64
     secrets: inherit
 
   build-linux-arm64:
     uses: ./.github/workflows/build-linux-arm64.yml
+    with:
+      arch: arm64
     secrets: inherit
 
   build-darwin-amd64:
     uses: ./.github/workflows/build-darwin-amd64.yml
+    # with:
+    #   arch: amd64
     secrets: inherit
 
   build-darwin-arm64:
     uses: ./.github/workflows/build-darwin-arm64.yml
+    # with:
+    #   arch: arm64
     secrets: inherit    
