--- a/.github/workflows/build-darwin-arm64.yml
+++ b/.github/workflows/build-darwin-arm64.yml
@@ -1,10 +1,10 @@
 name: Build Darwin ARM64
 on:
   workflow_call:
-    inputs:
-      arch:
-        required: true
-        type: string
+    # inputs:
+    #   arch:
+    #     required: true
+    #     type: string
 jobs:
   build:
     runs-on: macos-latest
@@ -25,7 +25,7 @@ jobs:
           # MOVEVM_VERSION=$(grep MOVEVM_VERSION $GITHUB_WORKSPACE/.github/workflows/config | cut -d '=' -f2)
           MOVEVM_VERSION=$(go list -m github.com/initia-labs/movevm | awk '{print $2}')    
           echo "MOVEVM_VERSION=${MOVEVM_VERSION}" >> $GITHUB_ENV        
-          echo "GOARCH=${{ inputs.arch }}" >> $GITHUB_ENV
+          echo "GOARCH=arm64" >> $GITHUB_ENV
           echo "GOOS=darwin" >> $GITHUB_ENV
           if [[ "${{ github.ref }}" == "refs/tags/"* ]]; then
             VERSION=${GITHUB_REF#refs/tags/}
@@ -33,13 +33,7 @@ jobs:
             VERSION="v0.0.0-${GITHUB_SHA::8}"
           fi
           echo "VERSION=${VERSION}" >> $GITHUB_ENV
-          if [ "${{ inputs.arch }}" == "amd64" ]; then
-            echo "ARCH_NAME=x86_64" >> $GITHUB_ENV
-          elif [ "${{ inputs.arch }}" == "arm64" ]; then
-            echo "ARCH_NAME=aarch64" >> $GITHUB_ENV
-          else
-            echo "ARCH_NAME=${{ inputs.arch }}" >> $GITHUB_ENV
-          fi
+          echo "ARCH_NAME=aarch64" >> $GITHUB_ENV
           
       - name: Ensure dependencies
         run: |
