--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -57,8 +57,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          build-args: "GITHUB_ACCESS_TOKEN=${{ secrets.GH_READ_TOKEN }}"
-          file: images/private/Dockerfile
+          file: Dockerfile
           push: ${{ startsWith(github.ref, 'refs/tags') }} # push image only for tags
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -97,8 +96,10 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          build-args: "GITHUB_ACCESS_TOKEN=${{ secrets.GH_READ_TOKEN }},BASE_IMAGE=${{ env.BASE_IMAGE }}"
+          build-args: "BASE_IMAGE=${{ env.BASE_IMAGE }}"
           file: images/node/Dockerfile
           push: ${{ startsWith(github.ref, 'refs/tags') }} # push image only for tags
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+        env:
+          BASE_IMAGE: ${{ env.BASE_IMAGE }}
