--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,9 +22,6 @@ jobs:
   test-coverage-upload:
     name: Run test and upload codecov
     env:
-      # for private repo access
-      GOPRIVATE: github.com/initia-labs,github.com/skip-mev/slinky
-      GITHUB_ACCESS_TOKEN: ${{ secrets.GH_READ_TOKEN }}
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     runs-on: ubuntu-latest
     steps:
@@ -40,8 +37,6 @@ jobs:
             **/**.go
             go.mod
             go.sum
-      # for private repo access
-      - run: git config --global url.https://${GITHUB_ACCESS_TOKEN}:x-oauth-basic@github.com/.insteadOf https://github.com/
       - name: build
         run: |
           make build
@@ -49,6 +44,8 @@ jobs:
         run: |
           go test ./... -mod=readonly -timeout 12m -race -coverprofile=coverage.txt -covermode=atomic -tags='ledger test_ledger_mock'
         if: ${{ env.GIT_DIFF != '' }}
+        env:
+          GIT_DIFF: ${{ env.GIT_DIFF }}
       - name: filter out DONTCOVER
         run: |
           excludelist="$(find ./ -type f -name '*.go' | xargs grep -l 'DONTCOVER')"
@@ -59,9 +56,13 @@ jobs:
             sed -i.bak "/$(echo $filename | sed 's/\//\\\//g')/d" coverage.txt
           done
         if: ${{ env.GIT_DIFF != '' }}
+        env:
+          GIT_DIFF: ${{ env.GIT_DIFF }}
       - uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.txt
           fail_ci_if_error: true
         if: ${{ env.GIT_DIFF != '' }}
+        env:
+          GIT_DIFF: ${{ env.GIT_DIFF }}
