convert node docker to built only at main and tag

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -63,6 +63,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
   node:
+    if: ${{ startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main' }}
     name: Node
     needs: initiad
     runs-on: ubuntu-latest
