enable whitelist stableswap

--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -271,6 +271,9 @@
           "Params": "MarketMapParams"
         }
       }
+    },
+    {
+      "url": "./tmp-swagger-gen/initia/tx/v1/query.swagger.json"
     }
   ]
 }
